--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,11 @@
 *._*
 *.DS*
 *.so
-bomberman
+Bomberman
 cmake-build-debug/
 CMakeCache.txt
 .idea/
 CMakeFiles
 Makefile
 .nanogui
+cmake_install.cmake
