--- a/Bomberman_Liam.cbp
+++ b/Bomberman_Liam.cbp
@@ -11,30 +11,30 @@
 				<Option working_dir="/goinfre/lchimes/Bomberman_Liam"/>
 				<Option type="4"/>
 				<MakeCommands>
-					<Build command="/usr/bin/make -j4 -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 all"/>
-					<CompileFile command="/usr/bin/make -j4 -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j4 -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j4 -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/make -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 all"/>
+					<CompileFile command="/usr/bin/make -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="rebuild_cache">
 				<Option working_dir="/goinfre/lchimes/Bomberman_Liam"/>
 				<Option type="4"/>
 				<MakeCommands>
-					<Build command="/usr/bin/make -j4 -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 rebuild_cache"/>
-					<CompileFile command="/usr/bin/make -j4 -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j4 -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j4 -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/make -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 rebuild_cache"/>
+					<CompileFile command="/usr/bin/make -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="edit_cache">
 				<Option working_dir="/goinfre/lchimes/Bomberman_Liam"/>
 				<Option type="4"/>
 				<MakeCommands>
-					<Build command="/usr/bin/make -j4 -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 edit_cache"/>
-					<CompileFile command="/usr/bin/make -j4 -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j4 -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j4 -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/make -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 edit_cache"/>
+					<CompileFile command="/usr/bin/make -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="Bomberman_Liam">
@@ -49,18 +49,12 @@
 					<Add directory="/goinfre/lchimes/Bomberman_Liam/DEPENDANTS/nanogui/include"/>
 					<Add directory="/goinfre/lchimes/Bomberman_Liam/DEPENDANTS/nanogui/ext/eigen"/>
 					<Add directory="/goinfre/lchimes/Bomberman_Liam/DEPENDANTS/nanogui/ext/nanovg/src"/>
-					<Add directory="/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1"/>
-					<Add directory="/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/clang/7.3.0/include"/>
-					<Add directory="/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include"/>
-					<Add directory="/usr/include"/>
-					<Add directory="/System/Library/Frameworks"/>
-					<Add directory="/Library/Frameworks"/>
 				</Compiler>
 				<MakeCommands>
-					<Build command="/usr/bin/make -j4 -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 Bomberman_Liam"/>
-					<CompileFile command="/usr/bin/make -j4 -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j4 -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j4 -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/make -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 Bomberman_Liam"/>
+					<CompileFile command="/usr/bin/make -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="Bomberman_Liam/fast">
@@ -75,18 +69,12 @@
 					<Add directory="/goinfre/lchimes/Bomberman_Liam/DEPENDANTS/nanogui/include"/>
 					<Add directory="/goinfre/lchimes/Bomberman_Liam/DEPENDANTS/nanogui/ext/eigen"/>
 					<Add directory="/goinfre/lchimes/Bomberman_Liam/DEPENDANTS/nanogui/ext/nanovg/src"/>
-					<Add directory="/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1"/>
-					<Add directory="/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/clang/7.3.0/include"/>
-					<Add directory="/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include"/>
-					<Add directory="/usr/include"/>
-					<Add directory="/System/Library/Frameworks"/>
-					<Add directory="/Library/Frameworks"/>
 				</Compiler>
 				<MakeCommands>
-					<Build command="/usr/bin/make -j4 -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 Bomberman_Liam/fast"/>
-					<CompileFile command="/usr/bin/make -j4 -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j4 -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j4 -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/make -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 Bomberman_Liam/fast"/>
+					<CompileFile command="/usr/bin/make -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -f &quot;/goinfre/lchimes/Bomberman_Liam/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 		</Build>
