made menu class and reintegrated it with core

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ set(SOURCE_FILES
 		src/ExtraBomb.cpp
 		src/Game.cpp
 		src/LevelHatch.cpp
+		src/Menu.cpp
 		src/Player.cpp
 		src/RangeExtender.cpp
 		src/RemoteDetonator.cpp
