--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,8 @@ if (NOT IS_DIRECTORY "$ENV{HOME}/.brew/Cellar/glew")
 	execute_process(COMMAND brew install glew)
 endif()
 
-if (NOT IS_DIRECTORY "${PROJECT_SOURCE_DIR}/.irrKlang/")
+if (NOT IS_DIRECTORY "${PROJECT_SOURCE_DIR}/.irrKlang/include/")
+	execute_process(COMMAND rm -rf .irrKlang)
 	execute_process(COMMAND git clone https://github.com/Trismaske/irrKlang_cmake.git .irrKlang)
 endif()
 
