tutorial working, need to utilize in game

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,13 +31,18 @@ endif()
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
     message(STATUS "GCC detected, adding compile flags")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Werror -Wextra")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 endif()
 
 set(SOURCE_FILES
+	src/controls.cpp
+	src/objLoader.cpp
+	src/quaternion_utils.cpp
+	src/shader.cpp
+	src/tangentspace.cpp
+	src/vboindexer.cpp
 	src/Animation.cpp
 	src/Bomb.cpp
-	src/Bomberman.cpp
 	src/Box.cpp
 	src/BreakableBox.cpp
 	src/Camera.cpp
@@ -60,8 +65,12 @@ set(SOURCE_FILES
 	src/RangeExtender.cpp
 	src/RemoteDetonator.cpp
 	src/Settings.cpp
+	src/shader.cpp
 	src/Sound.cpp
 	src/Stb_image.cpp
+	src/text2D.cpp
+	src/texture.cpp
+	src/tutorial11.cpp
 	src/UnbreakableBox.cpp
 	src/Util.cpp)
 
